--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4,9 +4,7 @@
 body {	
 	background: url('/images/bg-2.jpg');
 	background: #ececec;
-	font: {
-		family: 'Roboto', sans-serif;
-	}
+	font-family: 'Roboto', sans-serif;
 }
 
 @media #{$phone} {	
@@ -366,7 +364,7 @@ body {
 				list-style: none;
 				a { 
 					font-size: $font-size-h4;
-					font-weight:300;
+					font-weight:400;
 				}
 			}
 
