--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4,9 +4,7 @@
 body {	
 	background: url('/images/bg-2.jpg');
 	background: #ececec;
-	font: {
-		family: 'Roboto', sans-serif;
-	}
+	font-family: 'Roboto', sans-serif;	
 }
 
 @media #{$phone} {	
