--- a/sass/style.scss
+++ b/sass/style.scss
@@ -363,13 +363,15 @@ body {
 				font-weight:bold;
 			}
 			img {
-				width:170px;
 				margin-bottom: 20px;
-				&.left {
-					margin-right: 20px;
-				}
-				&.right {
-					margin-left: 20px;
+				@media #{$tablet-sm} {
+					width:170px;
+					&.left {
+						margin-right: 20px;
+					}
+					&.right {
+						margin-left: 20px;
+					}
 				}
 			}
 			a:after { 
