--- a/sass/style.scss
+++ b/sass/style.scss
@@ -36,6 +36,7 @@ body {
 	h2 { 
 		text-transform: uppercase; 
 	}
+
 	.left {
 		float:left;
 	}
@@ -81,6 +82,13 @@ body {
 
 		
 	// Navbar
+	.navbar-default .navbar-nav > .active > {
+		a,a:hover,a:focus {
+			color: #ddd;
+    		background: none;
+		}
+	}
+
 	.navbar {
 		margin-bottom: 0px;
 		border-radius: 0px;
