--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,8 +1,7 @@
 @import "base";
 @import "../bourbon/bourbon";
 
-body {	
-	background: url('/images/bg-2.jpg');
+body {		
 	background: #ececec;
 	font-family: 'Roboto', sans-serif;
 }
@@ -46,7 +45,7 @@ body {
 		float:right;
 	}
 	// Header
-	header {		
+	header {
 		.logo {
 			float:left;
 			margin-right:38px;
@@ -54,31 +53,31 @@ body {
 			@media #{$phone-sm} {
 				float:none;
 				margin:0px;
-				text-align:center;
+				text-align:center;				
 			}
 			img { 
 				width:140px;
 				padding-top:5px;
-				box-shadow: 25px 0px 30px 20px $white;
+				box-shadow: 20px 0px 30px 20px $white;
 				background: $white;
-				@include setBorderRadius(0 60px 60px 0);
+				@include setBorderRadius(0 30px 30px 0);
 				@media #{$phone} {
 					margin-left:-15px;
 				}
 			}
 		}
 		@media #{$tablet-sm} {
-			@include setBackground('../images/slimbg_2.jpg', 'cover');
-			opacity:0.9;
+			background: #060618 url('../images/banner_1.png') no-repeat;
+			background-size: contain;
+    		background-position: right;
 		}
-		.banner {
-			float: right;
-			@extend %brandFont;
-			margin: 20px 20px 0px 0px;
-			h1 {
-				color:#aaa;
-				font-size: 1.6em;
-			}
+		@media #{$phone} {
+			background: #060618 url('../images/banner_1.png') no-repeat;
+			background-size: cover;
+			background-position: right;
+		}
+		@media #{$phone-sm} {
+			background:none;
 		}
 	}
 
@@ -155,6 +154,7 @@ body {
 		}
 		
 		.navbar-right {
+			display: inline-flex;
 			&.nav > li {
 				&:hover {
 					border-bottom: none;
