--- a/sass/style.scss
+++ b/sass/style.scss
@@ -370,12 +370,14 @@ body {
 			img {
 				max-width:100%;
 				height:550px;
+				margin: 10px auto 3px auto;				
+				border-radius:5px;
 				@media #{$phone-sm} { 
 					height:250px;
 				}
-				margin: 0 auto;
+				
 			}
-			p.caption {
+			figcaption {
 				padding:10px;
 			}
 		}
