--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2,7 +2,8 @@
 @import "../bourbon/bourbon";
 
 body {		
-	background: #ececec;
+	margin:0px;
+	padding:0px;
 	font-family: 'Roboto', sans-serif;
 }
 
@@ -21,8 +22,8 @@ body {
 	background: $body-bg;
 	/*box-shadow: 0px 0px 40px #222;*/
 	padding: setSpacing(0);
-	max-width:1000px;
-
+	
+	width:100%;
 	// set header properties
 	#{number('h',1,6)} {
 		@extend %baseColor;		
@@ -63,18 +64,36 @@ body {
 				@media #{$phone} {
 					margin-left:-15px;
 				}
+			}		
+		}
+		.banner {						
+			@media #{$phone-sm} {
+				display:none;
 			}
+			float:right;
+			text-transform:uppercase;
+			margin-top: 20px;
+			h1 { 
+				margin-right:28px;
+				font-size:2.5vw;
+				@media #{$phone} {
+					font-size:4vw;
+					margin-right:0px;
+				}
+				color:#ddd;
+				font-family:Helvetica;
+				font-weight:100;
+				font-style:italic;
+				span {
+					font-style:normal;
+				}
+			}
+
 		}
-		@media #{$tablet-sm} {
-			background: #060618 url('../images/banner_1.png') no-repeat;
-			background-size: contain;
-    		background-position: right;
-		}
-		@media #{$phone} {
-			background: #060618 url('../images/banner_1.png') no-repeat;
-			background-size: cover;
-			background-position: right;
-		}
+		
+		background: url('../images/bg.jpg') no-repeat;		
+		background-size: cover;
+		
 		@media #{$phone-sm} {
 			background:none;
 		}
@@ -253,12 +272,12 @@ body {
 	.carousel-inner, 
 	.carousel-inner .item {
 		img {
-			height: 470px;
+			height: 550px;
 			@media #{$phone} {
 				height:350px;
 			}
 			@media #{$phone-sm} {
-				height:300px;
+				height:280px;
 			}
 			width:100%;
 		}
