--- a/sass/style.scss
+++ b/sass/style.scss
@@ -5,6 +5,7 @@ body {
 	margin:0px;
 	padding:0px;
 	font-family: 'Roboto', sans-serif;
+	background: #ececec;
 }
 
 @media #{$phone} {	
@@ -21,9 +22,9 @@ body {
 .container {
 	background: $body-bg;
 	/*box-shadow: 0px 0px 40px #222;*/
-	padding: setSpacing(0);
-	
-	width:100%;
+	padding: setSpacing(0);	
+	max-width:1000px;
+
 	// set header properties
 	#{number('h',1,6)} {
 		@extend %baseColor;		
@@ -75,7 +76,7 @@ body {
 			margin-top: 20px;
 			h1 { 
 				margin-right:28px;
-				font-size:2.5vw;
+				font-size:1.6vw;
 				@media #{$phone} {
 					font-size:4vw;
 					margin-right:0px;
@@ -272,11 +273,16 @@ body {
 	.carousel-inner, 
 	.carousel-inner .item {
 		img {
-			
-				height:auto;
-			
-			width:100%;
-		}
+ 			height: 470px;
+ 
+  			@media #{$phone} {
+  				height:350px;
+  			}
+  			@media #{$phone-sm} {
+ 				height:300px;
+  			}
+  			width:100%;
+  		}
 	}
 
 	
