--- a/sass/style.scss
+++ b/sass/style.scss
@@ -20,8 +20,12 @@ body {
 }
 
 .container {
-	background: $body-bg;
-	/*box-shadow: 0px 0px 40px #222;*/
+	// Navbar
+	@import "nav";
+	// Carousel
+	@import "carousel";
+
+	background: $body-bg;	
 	padding: setSpacing(0);	
 	max-width:1000px;
 
@@ -46,6 +50,7 @@ body {
 	.right {
 		float:right;
 	}
+
 	// Header
 	header {
 		.logo {
@@ -105,193 +110,63 @@ body {
 			background:none;
 		}
 	}
-
-		
-	// Navbar
-	.navbar-default .navbar-nav > .active > {
-		a,a:hover,a:focus {
-			color: #ddd;
-    		background: none;
+	
+	// Home banner
+	.home-banner {
+		position:relative;
+		text-align:center;
+		img {
+			max-width:100%;
+			opacity:0.9;
 		}
-	}
-
-	.navbar {
-		margin-bottom: 0px;
-		border-radius: 0px;
-		text-transform: uppercase;
-		border: none;	
-		background: $brand-primary;
-		min-height: 0px;
-		.navbar-toggle {
-			background-color: none;
-			border: none;	
-			.icon-bar {
-		    	background-color: $nav-font-color;
+		.home-banner-content {
+			position:absolute;			
+			padding:20px;
+			bottom:10px;			
+			h1 {
+				color:#fff;
+				margin-bottom:20px;
+				font-size:17px;
+				line-height:22px;
+				padding: 0 20px;
 			}
-		}
-		.navbar-brand {
-			position:relative;
-			padding: 6px 15px;
-		}
-		.nav > li {
-			cursor: pointer;
-			a {
-				color:#ddd;
-				padding: 10px 17px;
-				@media #{$tablet-only} {
-					padding: 10px 14px;
-				}
-				&:focus {
-					background-color: transparent;
-				}
+			a {			
+				font-size: 15px;
 			}
-			&.current {
-				background: $orange;
-				a {
-					color:$white;
-				}
-			}			
-			@media #{$phone} {
-				a:hover {
-					font-weight:normal;
-					color:$orange;
-				}
-				&.current {
-					border: none;
-					font-weight:900;
-					background: none;
-					a {
-						color:$orange;
-					}
+			
+			@media #{$tablet-sm} {
+				bottom:30px;	
+				h1 {
+					margin-bottom:40px;
+					font-size:20px;
+					line-height:25px;
+					padding: 0 20px;
 				}
 			}
 			@media #{$tablet} {
-				&:hover {
-					background: $orange;
-					a { 
-						color:$nav-font-color;
-						&:hover {
-							color:$white;
-						}
-					}
+				bottom:40px;	
+				h1 {
+					margin-bottom:60px;
+					font-size:20px;
+					line-height:25px;
+					padding: 0 50px;
 				}
 			}
-		}
-		
-		.navbar-right {
-			display: inline-flex;
-			&.nav > li {
-				&:hover {
-					border-bottom: none;
-					background: none;
-				}
-				> a {
-					padding: 0px 10px;
-					&:hover {
-						font-weight:700;
-					}
-				}
+			
+			@media #{$desktop} {
+				padding:50px;
+				bottom:50px;
+				h1 {
+					margin-bottom:55px;
+					font-size:25px;
+					line-height:35px;
+					padding: 0 100px;
+				}			
 			}
-			text-transform: none;
-		}
-
-		.navbar-toggle {
-			margin-right: 0px;
-			&:hover, &:focus {
-				background-color: transparent;
-			}
-		}
-
-		[class*="fa"] {
-			border-radius: 30px;
-		    color: $white;
-		    display: inline-block;
-		    width: 25px;
-		    height: 25px;
-		    line-height: 25px;
-		    text-align: center;
-		    margin: 7px 5px 0px 5px;
-		}
-		[class*="fa fa-envelope"] {
-		    background-color: $orange;
-		    padding-right:1px;
-		}
-
-		[class*="fa fa-facebook"],
-		[class*="fa fa-twitter"] {
-		    background-color: $nav-font-color;
-		    padding-top: 2px;		    
-		    color:#4267b2;
-		    
-		    &:hover {
-		    	color:$nav-font-color;
-		    	background-color:$brand-primary;
-		    }
-		}
-		[class*="fa fa-twitter"] {
-			margin-right:20px;
-		}
-	}
-		
-	@media #{$tablet} {
-		.navbar {
-			.container-fluid {	
-			    padding-left: 0px;
-    			
-				.navbar-collapse {
-					margin:0px;
-					padding:setSpacing(0);
-				}
-			}
+			
 		}
 	}
 
-	// Home page images
-	.carousel-fade {
-	    .carousel-inner {
-	        .item {
-	            transition-property: opacity;
-	        }
-	        
-	        .item,
-	        .active.left,
-	        .active.right {
-	            opacity: 0;
-	        }
-
-	        .active,
-	        .next.left,
-	        .prev.right {
-	            opacity: 1;
-	        }
-
-	        .next,
-	        .prev,
-	        .active.left,
-	        .active.right {
-	            left: 0;
-	            transform: translate3d(0, 0, 0);
-	        }
-	    }
-	}
-
-	.carousel, 
-	.carousel-inner, 
-	.carousel-inner .item {
-		img {
- 			height: 470px;
- 
-  			@media #{$phone} {
-  				height:350px;
-  			}
-  			@media #{$phone-sm} {
- 				height:300px;
-  			}
-  			width:100%;
-  		}
-	}
-
-	
 	// main section
 	.main {
 		@media #{$phone} {
@@ -406,6 +281,12 @@ body {
 			}
 			figcaption {
 				padding:10px;
+			}
+			.slick-prev {
+			    left: -35px;
+			}
+			.slick-prev:before, .slick-next:before{
+				font-size: 30px; 
 			}
 		}
 		// Blog
