--- a/sass/style.scss
+++ b/sass/style.scss
@@ -22,6 +22,7 @@ body {
 .container {
 	// Navbar
 	@import "nav";
+
 	// Carousel
 	@import "carousel";
 
@@ -129,6 +130,9 @@ body {
 				font-size:17px;
 				line-height:22px;
 				padding: 0 20px;
+				font-family: 'Roboto', sans-serif;
+				font-family: 'Raleway', sans-serif;
+				font-weight:100 !important;
 			}
 			a {			
 				font-size: 15px;
