--- a/sass/style.scss
+++ b/sass/style.scss
@@ -79,26 +79,23 @@ body {
 			}
 			float:right;
 			text-transform:uppercase;
-			margin-top: 20px;
+			margin-top: 25px;
 			h1 { 
 				margin-right:28px;
 				
 				@media #{$phone} {
-					font-size:4vw;
 					margin-right:0px;
 				}
-				@media #{$tablet} {
-					font-size:3vw;
-				}
-				@media #{$desktop} {
-					font-size:2vw;
-				}
+				
 				color:#eee;
-				font-family:Helvetica;
-				font-weight:100;
-				font-style:italic;
+				font: {
+					family: 'Roboto', sans-serif;
+					size: 25px;
+					weight:100;
+				}
+
 				span {
-					font-style:normal;
+					opacity: 0.3;
 				}
 			}
 
